--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
+# API
+API_URL=http://localhost:8000
 # JWT
-JWT_SECRET=
+JWT_SECRET=Rusorez123
 JWT_TOKEN_AUDIENCE=localhost:8000
 JWT_TOKEN_ISSUER=localhost:8000
-JWT_ACCESS_TOKEN_TTL=3600
+JWT_ACCESS_TOKEN_TTL=36000
+JWT_REFRESH_TOKEN_TTL=86400
+# S3
+AWS_S3_BUCKET_NAME=train-chat
+AWS_S3_BUCKET_ACCESS_KEY_ID=AKIAQ3QHTIKOYEPRGHXO
+AWS_S3_BUCKET_SECRET_ACCESS_KEY=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
+AWS_S3_BUCKET_LOCATION=eu-north-1
